--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,30 @@
 @import "reset.css";
+
 body {
     background-color: #f6f9fc;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    padding: 0px;
+}
+
+.color_s{
+    padding: 50px 20px;
+    height:700px;
+}
+
+.color_s .controls_btns {
+    display: flex;
+    flex-direction: column;
+    margin-top:20px;
+}
+
+.color_s .controls_btns button {
+    margin-bottom: 5px;
+}
+
+.canvasCenter {
     display: flex;
     flex-direction: column;
     align-items:  center;
@@ -17,7 +40,7 @@ body {
 }
 
 .controls {
-    margin-top: 80px;
+    margin-top: 20px;
     display: flex;
     flex-direction:column;
     align-items:  center;
